<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.darkheroes.Chouse2DeckActivity"
    android:orientation="vertical">
    <TextView
        android:text="@string/title_activity_chouse2_deck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />
    <LinearLayout
        android:layout_width="300sp"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_below="@+id/textView"
        android:layout_above="@+id/button1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <Button
                android:id="@+id/button2"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/cards1"
                android:onClick="doVisible1"
                />
            <Button
                android:id="@+id/button3"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/cards2"
                android:onClick="doVisible2"
               />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/button4"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cards3"
                    android:onClick="doVisible3"
                    android:tag="3"
                    />
                <Button
                    android:id="@+id/button5"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cards4"
                    android:onClick="doVisible4"
                    android:tag="4"
                    />
            </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button6"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/cards5"
            android:onClick="doVisible5"
            android:tag="5"
            />
        <Button
            android:id="@+id/button7"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/cards6"
            android:onClick="doVisible6"
            android:tag="6"
            />
    </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/button8"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cards7"
                    android:onClick="doVisible7"
                    android:tag="7"
                    />
                <Button
                    android:id="@+id/button9"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cards8"
                    android:onClick="doVisible8"
                    android:tag="8"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/button10"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cards9"
                    android:onClick="doVisible9"
                    android:tag="9"
                    />
                <Button
                    android:id="@+id/button11"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cards10"
                    android:onClick="doVisible10"
                    android:tag="10"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/button12"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cards11"
                    android:onClick="doVisible11"
                    android:tag="11"
                    />
                <Button
                    android:id="@+id/button13"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cards12"
                    android:onClick="doVisible12"
                    android:tag="12"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/button14"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cards13"
                    android:onClick="doVisible13"
                    android:tag="13"
                    />
                <Button
                    android:id="@+id/button15"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cards14"
                    android:onClick="doVisible14"
                    android:tag="14"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/button16"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cards15"
                    android:onClick="doVisible15"
                    android:tag="15"
                    />
                <Button
                    android:id="@+id/button17"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cards16"
                    android:onClick="doVisible16"
                    android:tag="16"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/button18"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cards17"
                    android:onClick="doVisible17"
                    android:tag="17"
                    />
                <Button
                    android:id="@+id/button19"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cards18"
                    android:onClick="doVisible18"
                    android:tag="18"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/button20"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cards19"
                    android:onClick="doVisible19"
                    android:tag="19"
                    />
                <Button
                    android:id="@+id/button21"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cards20"
                    android:onClick="doVisible20"
                    android:tag="20"
                    />
            </TableRow>
        </TableLayout>
    </ScrollView>
     <ScrollView
         android:layout_width="190dp"
         android:layout_height="match_parent">
         <TableLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:orientation="vertical">
             <Button
                 android:id="@+id/but1"
                 android:layout_width="140dp"
                 android:layout_height="wrap_content"
                 android:text="Карта1"
                 android:visibility="invisible"
                 android:onClick="doInvisible1"
                 android:tag="1"
                 />
             <Button
                 android:id="@+id/but2"
                 android:layout_width="140dp"
                 android:layout_height="fill_parent"
                 android:text="Карта 2"
                 android:visibility="invisible"
                 android:onClick="doInvisible2"
                 />
             <Button
                 android:id="@+id/but3"
                 android:layout_width="140dp"
                 android:layout_height="fill_parent"
                 android:text="Карта 3"
                 android:visibility="invisible"
                 android:onClick="doInvisible3"
                 />
             <Button
                 android:id="@+id/but4"
                 android:layout_width="140dp"
                 android:layout_height="fill_parent"
                 android:text="Карта 4"
                 android:visibility="invisible"
                 android:onClick="doInvisible4"
                 />
             <Button
                 android:id="@+id/but5"
                 android:layout_width="140dp"
                 android:layout_height="fill_parent"
                 android:text="Карта 5"
                 android:visibility="invisible"
                 android:onClick="doInvisible5"
                 />
             <Button
                 android:id="@+id/but6"
                 android:layout_width="140dp"
                 android:layout_height="fill_parent"
                 android:text="Карта 6"
                 android:visibility="invisible"
                 android:onClick="doInvisible6"
                 />
             <Button
                 android:id="@+id/but7"
                 android:layout_width="140dp"
                 android:layout_height="fill_parent"
                 android:text="Карта 7"
                 android:visibility="invisible"
                 android:onClick="doInvisible7"
                 />
             <Button
                 android:id="@+id/but8"
                 android:layout_width="140dp"
                 android:layout_height="fill_parent"
                 android:text="Карта 8"
                 android:visibility="invisible"
                 android:onClick="doInvisible8"
                 />
             <Button
                 android:id="@+id/but9"
                 android:layout_width="140dp"
                 android:layout_height="fill_parent"
                 android:text="Карта 9"
                 android:visibility="invisible"
                 android:onClick="doInvisible9"
                 />
             <Button
                 android:id="@+id/but10"
                 android:layout_width="140dp"
                 android:layout_height="fill_parent"
                 android:text="Карта 10"
                 android:visibility="invisible"
                 android:onClick="doInvisible10"
                 />
             <Button
                 android:id="@+id/but11"
                 android:layout_width="140dp"
                 android:layout_height="fill_parent"
                 android:text="Карта 11"
                 android:visibility="invisible"
                 android:onClick="doInvisible11"
                 />
             <Button
                 android:id="@+id/but12"
                 android:layout_width="140dp"
                 android:layout_height="fill_parent"
                 android:text="Карта 12"
                 android:visibility="invisible"
                 android:onClick="doInvisible12"
                 />
             <Button
                 android:id="@+id/but13"
                 android:layout_width="140dp"
                 android:layout_height="fill_parent"
                 android:text="Карта 13"
                 android:visibility="invisible"
                 android:onClick="doInvisible13"
                 />
             <Button
                 android:id="@+id/but14"
                 android:layout_width="140dp"
                 android:layout_height="fill_parent"
                 android:text="Карта 14"
                 android:visibility="invisible"
                 android:onClick="doInvisible14"
                 />
             <Button
                 android:id="@+id/but15"
                 android:layout_width="140dp"
                 android:layout_height="fill_parent"
                 android:text="Карта 15"
                 android:visibility="invisible"
                 android:onClick="doInvisible15"
                 />
             <Button
                 android:id="@+id/but16"
                 android:layout_width="140dp"
                 android:layout_height="fill_parent"
                 android:text="Карта 16"
                 android:visibility="invisible"
                 android:onClick="doInvisible16"
                 />
             <Button
                 android:id="@+id/but17"
                 android:layout_width="140dp"
                 android:layout_height="fill_parent"
                 android:text="Карта 17"
                 android:visibility="invisible"
                 android:onClick="doInvisible17"
                 />
             <Button
                 android:id="@+id/but18"
                 android:layout_width="140dp"
                 android:layout_height="fill_parent"
                 android:text="Карта 18"
                 android:visibility="invisible"
                 android:onClick="doInvisible18"
                 />
             <Button
                 android:id="@+id/but19"
                 android:layout_width="140dp"
                 android:layout_height="fill_parent"
                 android:text="Карта 19"
                 android:visibility="invisible"
                 android:onClick="doInvisible19"
                 />
             <Button
                 android:id="@+id/but20"
                 android:layout_width="140dp"
                 android:layout_height="fill_parent"
                 android:text="Карта 20"
                 android:visibility="invisible"
                 android:onClick="doInvisible20"
                 />
             <TableRow
                 android:orientation="horizontal">
                 <Button
                     android:layout_height="fill_parent"
                     android:layout_width="70dp"
                     android:text="Сохранить"/>
                 <Button
                     android:layout_height="fill_parent"
                     android:layout_width="70dp"
                     android:text="Удалить"
                     android:onClick="Delete"/>
                </TableRow>
         </TableLayout>
     </ScrollView>
    </LinearLayout>
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/back"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
