<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.darkheroes.DeckActivity">

    <TextView
        android:text="@string/title_activity_deck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/varavar"
        android:layout_gravity="bottom"
        android:onClick="onClickVarvar"
        android:id="@+id/ChouseDeck3"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Создать колоду"
        android:layout_gravity="bottom"
        android:onClick="onClick2"
        android:id="@+id/ChouseDeck1"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/ChouseDeck2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Изменить колоду"
        android:layout_gravity="bottom"
        android:layout_below="@+id/ChouseDeck1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/back"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
